<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search_toolbar"
        android:icon="@drawable/ic_baseline_search_24px"
        android:title="@string/string_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter_toolbar"
        android:icon="@drawable/ic_baseline_filter_list_24px"
        app:showAsAction="always"
        android:title="">
        <menu>
            <item
                android:id="@+id/action_category_popular"
                android:title="@string/string_category_popular"
                app:showAsAction="withText" />

            <item
                android:id="@+id/action_category_toprated"
                android:title="@string/string_category_toprated"
                app:showAsAction="withText" />

            <item
                android:id="@+id/action_category_upcoming"
                android:title="@string/string_category_upcoming"
                app:showAsAction="withText" />
        </menu>
    </item>


</menu>
