<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    tools:showIn="@layout/activity_details">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_poster"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription=""
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="w,2:3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:text="Movie title here" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tv_title,image_poster" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barrier" />

    <TextView
        android:id="@+id/label_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/string_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/secondaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_language"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
        tools:text="@string/string_date" />

    <TextView
        android:id="@+id/tv_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_baseline_date_range_24px"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        app:layout_constraintEnd_toEndOf="@+id/label_release_date"
        app:layout_constraintStart_toStartOf="@+id/label_release_date"
        app:layout_constraintTop_toBottomOf="@+id/view_divider"
        tools:text="@tools:sample/date/mmddyy" />

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="@+id/label_language"
        app:layout_constraintEnd_toStartOf="@+id/label_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_language"
        tools:text="233 votes" />

    <TextView
        android:id="@+id/tv_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_baseline_star_rate_18px"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        app:layout_constraintBottom_toBottomOf="@+id/tv_language"
        app:layout_constraintEnd_toEndOf="@+id/tv_count"
        app:layout_constraintStart_toStartOf="@+id/tv_count"
        app:layout_constraintTop_toTopOf="@+id/tv_language"
        tools:text="7/10" />

    <TextView
        android:id="@+id/label_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_language"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="@+id/label_release_date"
        app:layout_constraintEnd_toStartOf="@+id/label_release_date"
        app:layout_constraintStart_toEndOf="@+id/tv_count"
        app:layout_constraintTop_toTopOf="@+id/label_release_date" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_language_24px"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        app:layout_constraintBottom_toBottomOf="@+id/tv_release_date"
        app:layout_constraintEnd_toEndOf="@+id/label_language"
        app:layout_constraintStart_toStartOf="@+id/label_language"
        app:layout_constraintTop_toTopOf="@+id/tv_release_date"
        tools:text="En" />

    <View
        android:id="@+id/view_divider_bottom"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_count" />

    <TextView
        android:id="@+id/label_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/title_overview"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:textColor="@color/primaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_divider_bottom" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_overview"
        tools:text="@tools:sample/lorem" />

</android.support.constraint.ConstraintLayout>